--- a/index2.html
+++ b/index2.html
@@ -27,5 +27,6 @@
      <p class="racing-sans-one-regular">Japanese</p>
      <p2 class="racing-sans-one-regular">Fast</p2>
       </div>
+      <button type="button" onclick="goToPage2()" id="page-2Button">Go To Next Page</button>
 </body>
 </html>
