added notes to index2.html for button

--- a/index2.html
+++ b/index2.html
@@ -27,6 +27,7 @@
      <p class="racing-sans-one-regular">Japanese</p>
      <p2 class="racing-sans-one-regular">Fast</p2>
       </div>
+      <!-- needs funtion made & page 2 created -->
       <button type="button" onclick="goToPage2()" id="page-2Button">Go To Next Page</button>
 </body>
 </html>
